plugins {
	id 'java'
	id 'org.springframework.boot' version '3.2.3'
	id 'io.spring.dependency-management' version '1.1.4'
	id "com.github.ben-manes.versions" version "0.51.0"
	id 'jacoco'
	id 'org.graalvm.buildtools.native' version '0.10.1'
}

group = 'com.dreamlabs'
version = '0.0.2'

java {
	sourceCompatibility = '21'
}

repositories {
	mavenCentral()
}

dependencies {
	implementation 'org.springframework.boot:spring-boot-starter-web'

	testImplementation('org.springframework.boot:spring-boot-starter-test')
}

test {
	useJUnitPlatform()
}
